--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "langchain-community>=0.4.1",
     "langchain-google-genai>=3.2.0",
+    "langchain-huggingface>=0.1.2",
     "langchain-qdrant>=1.1.0",
     "qdrant-client>=1.16.1",
+    "sentence-transformers>=5.1.2",
 ]
